--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
       background-color: #000000;
       padding: 40px 20px;
       text-align: center;
-      color: #ffcc00;
+      color: #ada791;
     }
 
     header h1 {
